--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -383,8 +383,8 @@ spec:
   - name: Operator GitHub Repo
     url: https://github.com/eclipse-che/che-operator
   maintainers:
-  - email: dfestal@redhat.com
-    name: David Festal
+  - email: abazko@redhat.com
+    name: Anatolii Bazko
   maturity: stable
   provider:
     name: Eclipse Foundation
