--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -31,6 +31,7 @@ spec:
     strategy: Webhook
     webhook:
       clientConfig:
+        caBundle: Cg==
         service:
           name: webhook-service
           namespace: eclipse-che
