--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -26,6 +26,7 @@ spec:
     strategy: Webhook
     webhook:
       clientConfig:
+        caBundle: Cg==
         service:
           name: webhook-service
           namespace: eclipse-che
