--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-webhook-service_v1_service.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator-webhook-service_v1_service.yaml
@@ -19,7 +19,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: webhook-service
+  name: che-operator-webhook-service
 spec:
   ports:
   - port: 443
