--- a/deploy/deployment/kubernetes/objects/che-operator-webhook-service.Service.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator-webhook-service.Service.yaml
@@ -18,7 +18,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: webhook-service
+  name: che-operator-webhook-service
   namespace: eclipse-che
 spec:
   ports:
