--- a/config/profiles/kubernetes/kustomization.yaml
+++ b/config/profiles/kubernetes/kustomization.yaml
@@ -41,11 +41,11 @@ vars:
     objref:
       kind: Service
       version: v1
-      name: webhook-service
+      name: che-operator-webhook-service
     fieldref:
       fieldpath: metadata.namespace
   - name: SERVICE_NAME
     objref:
       kind: Service
       version: v1
-      name: webhook-service
+      name: che-operator-webhook-service
