--- a/deploy/deployment/kubernetes/objects/che-operator-serving-cert.Certificate.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator-serving-cert.Certificate.yaml
@@ -17,9 +17,9 @@ metadata:
   namespace: eclipse-che
 spec:
   dnsNames:
-  - webhook-service.eclipse-che.svc
-  - webhook-service.eclipse-che.svc.cluster.local
+  - che-operator-webhook-service.eclipse-che.svc
+  - che-operator-webhook-service.eclipse-che.svc.cluster.local
   issuerRef:
     kind: Issuer
-    name: selfsigned-issuer
+    name: che-operator-selfsigned-issuer
   secretName: che-operator-webhook-server-cert
