--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -20,7 +20,8 @@ metadata:
           "apiVersion": "org.eclipse.che/v1",
           "kind": "CheCluster",
           "metadata": {
-            "name": "eclipse-che"
+            "name": "eclipse-che",
+            "namespace": "eclipse-che"
           },
           "spec": {
             "auth": {
@@ -52,7 +53,8 @@ metadata:
           "apiVersion": "org.eclipse.che/v2",
           "kind": "CheCluster",
           "metadata": {
-            "name": "eclipse-che"
+            "name": "eclipse-che",
+            "namespace": "eclipse-che"
           },
           "spec": {
             "ingress": {
@@ -99,7 +101,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.47.0-520.next
+  name: eclipse-che-preview-openshift.v7.47.0-525.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -146,21 +148,19 @@ spec:
             name: ''
             version: v1
         specDescriptors:
-          - description: Container registry configuration.
-            displayName: Container registry
-            path: containerRegistry
-          - description: DevWorkspace operator configuration
-            displayName: Dev Workspace operator
-            path: devWorkspace
-          - description: Ingress configuration.
-            displayName: Ingress
-            path: ingress
-          - description: Server components configuration.
-            displayName: Server components
-            path: serverComponents
-          - description: Workspaces configuration.
+          - description: Development environment default configuration options
             displayName: Workspaces
             path: workspaces
+          - description: Che Server components configuration
+            displayName: Server components
+            path: serverComponents
+          - description: Che ingress hostname, authentication and TLS configuration
+            displayName: Ingress
+            path: ingress
+          - description: Configuration of an alternative registry that stores Che
+              images
+            displayName: Container registry
+            path: containerRegistry
         statusDescriptors:
           - description: Specifies the phase in which the Che deployment currently
               is.
@@ -1416,7 +1416,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.47.0-520.next
+  version: 7.47.0-525.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
