--- a/config/samples/org_v1_checluster.yaml
+++ b/config/samples/org_v1_checluster.yaml
@@ -14,6 +14,7 @@ apiVersion: org.eclipse.che/v1
 kind: CheCluster
 metadata:
   name: eclipse-che
+  namespace: eclipse-che
 spec:
   server:
     workspaceNamespaceDefault: "<username>-che"
