--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -790,7 +790,7 @@ spec:
             description: Desired configuration of Eclipse Che installation.
             properties:
               containerRegistry:
-                description: Container registry configuration.
+                description: Configuration of an alternative registry that stores Che images
                 properties:
                   hostname:
                     description: Optional hostname, or URL, to an alternate container registry to pull images from. This value overrides the container registry hostname defined in all the default container images involved in a Che deployment. This is particularly useful to install Che in a restricted environment.
@@ -799,71 +799,8 @@ spec:
                     description: Optional repository name of an alternate container registry to pull images from. This value overrides the container registry organization defined in all the default container images involved in a Che deployment. This is particularly useful to install Eclipse Che in a restricted environment.
                     type: string
                 type: object
-              devWorkspace:
-                description: DevWorkspace operator configuration
-                properties:
-                  deployment:
-                    description: Deployment override options.
-                    properties:
-                      container:
-                        description: A single application container.
-                        items:
-                          description: Container custom settings.
-                          properties:
-                            image:
-                              description: Container image. Omit it or leave it empty to use the default container image provided by the Operator.
-                              type: string
-                            imagePullPolicy:
-                              description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
-                              type: string
-                            name:
-                              description: Container name.
-                              type: string
-                            resources:
-                              description: Compute Resources required by this container.
-                              properties:
-                                limits:
-                                  description: Limits describes the maximum amount of compute resources allowed.
-                                  properties:
-                                    cpu:
-                                      description: CPU, in cores. (500m = .5 cores)
-                                      type: string
-                                    memory:
-                                      description: Memory, in bytes. (500Gi = 500GiB = 500 * 1024 * 1024 * 1024)
-                                      type: string
-                                  type: object
-                                request:
-                                  description: Requests describes the minimum amount of compute resources required.
-                                  properties:
-                                    cpu:
-                                      description: CPU, in cores. (500m = .5 cores)
-                                      type: string
-                                    memory:
-                                      description: Memory, in bytes. (500Gi = 500GiB = 500 * 1024 * 1024 * 1024)
-                                      type: string
-                                  type: object
-                              type: object
-                          type: object
-                        type: array
-                      securityContext:
-                        description: Security options the pod should run with.
-                        properties:
-                          fsGroup:
-                            description: A special supplemental group that applies to all containers in a pod. Default value is `1724`.
-                            format: int64
-                            type: integer
-                          runAsUser:
-                            description: The UID to run the entrypoint of the container process. Default value is `1724`.
-                            format: int64
-                            type: integer
-                        type: object
-                    type: object
-                  runningLimit:
-                    description: Maximum number of the running workspaces per user.
-                    type: string
-                type: object
               ingress:
-                description: Ingress configuration.
+                description: Che ingress hostname, authentication and TLS configuration
                 properties:
                   annotations:
                     additionalProperties:
@@ -964,7 +901,7 @@ spec:
                     type: string
                 type: object
               serverComponents:
-                description: Server components configuration.
+                description: Che Server components configuration
                 properties:
                   cheServer:
                     description: General configuration settings related to the Che server
@@ -1208,6 +1145,69 @@ spec:
                             type: string
                         type: object
                     type: object
+                  devWorkspace:
+                    description: DevWorkspace operator configuration
+                    properties:
+                      deployment:
+                        description: Deployment override options.
+                        properties:
+                          container:
+                            description: A single application container.
+                            items:
+                              description: Container custom settings.
+                              properties:
+                                image:
+                                  description: Container image. Omit it or leave it empty to use the default container image provided by the Operator.
+                                  type: string
+                                imagePullPolicy:
+                                  description: Image pull policy. Default value is `Always` for `nightly`, `next` or `latest` images, and `IfNotPresent` in other cases.
+                                  type: string
+                                name:
+                                  description: Container name.
+                                  type: string
+                                resources:
+                                  description: Compute Resources required by this container.
+                                  properties:
+                                    limits:
+                                      description: Limits describes the maximum amount of compute resources allowed.
+                                      properties:
+                                        cpu:
+                                          description: CPU, in cores. (500m = .5 cores)
+                                          type: string
+                                        memory:
+                                          description: Memory, in bytes. (500Gi = 500GiB = 500 * 1024 * 1024 * 1024)
+                                          type: string
+                                      type: object
+                                    request:
+                                      description: Requests describes the minimum amount of compute resources required.
+                                      properties:
+                                        cpu:
+                                          description: CPU, in cores. (500m = .5 cores)
+                                          type: string
+                                        memory:
+                                          description: Memory, in bytes. (500Gi = 500GiB = 500 * 1024 * 1024 * 1024)
+                                          type: string
+                                      type: object
+                                  type: object
+                              type: object
+                            type: array
+                          securityContext:
+                            description: Security options the pod should run with.
+                            properties:
+                              fsGroup:
+                                description: A special supplemental group that applies to all containers in a pod. Default value is `1724`.
+                                format: int64
+                                type: integer
+                              runAsUser:
+                                description: The UID to run the entrypoint of the container process. Default value is `1724`.
+                                format: int64
+                                type: integer
+                            type: object
+                        type: object
+                      runningLimit:
+                        description: Maximum number of the running workspaces per user.
+                        type: string
+                    type: object
                   devfileRegistry:
                     description: Configuration settings related to the Devfile registry used by the Che installation.
                     properties:
@@ -1408,7 +1408,7 @@ spec:
                     type: object
                 type: object
               workspaces:
-                description: Workspaces configuration.
+                description: Development environment default configuration options
                 properties:
                   defaultNamespace:
                     description: if users namespaces are not pre-created this field defines the Kubernetes namespace created when a user starts his first workspace. It's possible to use `<username>`, `<userid>` and `<workspaceid>` placeholders, such as che-workspace-<username>.
