--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -20,6 +20,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/managed-by: olm
     app.kubernetes.io/name: che
+    app.kubernetes.io/part-of: che.eclipse.org
   name: checlusters.org.eclipse.che
 spec:
   conversion:
