--- a/config/certmanager/certificate.yaml
+++ b/config/certmanager/certificate.yaml
@@ -18,6 +18,11 @@ kind: Issuer
 metadata:
   name: che-operator-selfsigned-issuer
   namespace: eclipse-che
+labels:
+  app.kubernetes.io/name: che
+  app.kubernetes.io/instance: che
+  app.kubernetes.io/part-of: che.eclipse.org
+  app.kubernetes.io/component: che-operator
 spec:
   selfSigned: {}
 ---
@@ -26,6 +31,11 @@ kind: Certificate
 metadata:
   name: che-operator-serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
   namespace: eclipse-che
+labels:
+  app.kubernetes.io/name: che
+  app.kubernetes.io/instance: che
+  app.kubernetes.io/part-of: che.eclipse.org
+  app.kubernetes.io/component: che-operator
 spec:
   # $(SERVICE_NAME) and $(SERVICE_NAMESPACE) will be substituted by kustomize
   dnsNames:
