--- a/deploy/deployment/kubernetes/objects/che-operator-serving-cert.Certificate.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator-serving-cert.Certificate.yaml
@@ -12,6 +12,11 @@
 
 apiVersion: cert-manager.io/v1
 kind: Certificate
+labels:
+  app.kubernetes.io/component: che-operator
+  app.kubernetes.io/instance: che
+  app.kubernetes.io/name: che
+  app.kubernetes.io/part-of: che.eclipse.org
 metadata:
   name: che-operator-serving-cert
   namespace: eclipse-che
