--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -23,8 +23,8 @@ metadata:
     service.beta.openshift.io/inject-cabundle: "true"
   labels:
     app.kubernetes.io/instance: che
-    app.kubernetes.io/managed-by: olm
     app.kubernetes.io/name: che
+    app.kubernetes.io/part-of: che.eclipse.org
   name: checlusters.org.eclipse.che
 spec:
   conversion:
