--- a/config/crd/patches/webhook_in_checlusters.yaml
+++ b/config/crd/patches/webhook_in_checlusters.yaml
@@ -23,7 +23,7 @@ spec:
       clientConfig:
         service:
           namespace: eclipse-che
-          name: che-operator-webhook-service
+          name: che-operator-service
           path: /convert
         # caBundle will be filled on creation
         caBundle: Cg==
