--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -33,7 +33,7 @@ spec:
       clientConfig:
         caBundle: Cg==
         service:
-          name: che-operator-webhook-service
+          name: che-operator-service
           namespace: eclipse-che
           path: /convert
       conversionReviewVersions:
@@ -2422,7 +2422,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator-webhook-service
+  name: che-operator-service
   namespace: eclipse-che
 spec:
   ports:
