--- a/config/openshift/patches/service_cert_patch.yaml
+++ b/config/openshift/patches/service_cert_patch.yaml
@@ -13,7 +13,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: che-operator-webhook-service
+  name: che-operator-service
   namespace: eclipse-che
   annotations:
     service.beta.openshift.io/serving-cert-secret-name: che-operator-webhook-server-cert
