--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -13,7 +13,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: che-operator-webhook-service
+  name: che-operator-service
   namespace: eclipse-che
   labels:
     app.kubernetes.io/name: che
