--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -28,7 +28,7 @@ spec:
       clientConfig:
         caBundle: Cg==
         service:
-          name: che-operator-webhook-service
+          name: che-operator-service
           namespace: eclipse-che
           path: /convert
       conversionReviewVersions:
