--- a/helmcharts/next/templates/che-operator-service.Service.yaml
+++ b/helmcharts/next/templates/che-operator-service.Service.yaml
@@ -13,18 +13,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
     app.kubernetes.io/component: che-operator
     app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator-webhook-service
+  name: che-operator-service
+  namespace: eclipse-che
 spec:
   ports:
   - port: 443
     targetPort: 9443
   selector:
     app: che-operator
-status:
-  loadBalancer: {}
